Fixed Broken Links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#about">About</a>
             <a href="#skills">Skills</a>
             <div id="mode">
-                <img class="icon" src="./eclipse.png">
+                <img class="icon" src="./img/eclipse.png">
             </div>
         </nav>
     </header>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="column">
-            <img class="me" src="valdi-cropped.jpg" />
+            <img class="me" src="./img/valdi-cropped.jpg" />
         </div>
     </section>
     <section id="projects">
@@ -50,12 +50,12 @@
         <div class="grid">
             <div class="project">
                 <h2>00Game</h2>
-                <img class="project-image" src="./00Game.png" alt="" >
+                <img class="project-image" src="./img/00Game.png" alt="" >
                 <p> A game about finding car licence plates that ends in 00</p>
             </div>
             <div class="project">
                 <h2>Flappyfuglur</h2>
-                <img class="project-image" src="./FlappyFuglur.png" alt="" >
+                <img class="project-image" src="./img/FlappyFuglur.png" alt="" >
                 <p> A simple flappy bird clone that has a global leaderboard</p>
             </div>
             <div class="project">
@@ -174,7 +174,7 @@
     <footer class="vbox">
         <h2> Get in touch: </h2>
         <div class="hbox start">
-            <img class="icon" src="./gmail.png" alt="Email">
+            <img class="icon" src="./img/gmail.png" alt="Email">
             <a href="mailto:valdi7913@gmail.com">valdi7913@gmail.com</a>
         </div>
         <div class="hbox start">
