First version finished

--- a/index-is.html
+++ b/index-is.html
@@ -16,17 +16,17 @@
 
 <body>
   <nav class="sidenav vbox">
-    <a href="#home"> Home </a>
-    <a href="#projects"> Projects </a>
-    <a href="#about"> About </a>
-    <a href="#skills"> Skills </a>
-    <a href="#contact"> Contact </a>
+    <a href="#home"> Heim </a>
+    <a href="#projects"> Verkefni </a>
+    <a href="#about"> Um mig </a>
+    <a href="#skills"> Hæfni </a>
+    <a href="#contact"> Hafðu samband </a>
   </nav>
   <header id="home">
     <h1>Valdi.dev</h1>
     <nav class="hbox start">
-      <a href="./index-is.html">
-        <img class="language icon" src="./img/iceland.png">
+      <a href="./index.html">
+        <img class="language icon" src="./img/unionjack.png">
       </a>
       <label id="mode">
         <img class="icon flip" src="./img/eclipse.png">
@@ -36,17 +36,17 @@
   <section id="hero" class="grid hbox">
     <div class="column">
       <div class="vbox">
-        <h1>Hey!</h1>
-        <p>I'm Valdi.</p>
-        <p>A Full-Stack Engineer.</p>
+        <h1>Halló!</h1>
+        <p>Ég heiti Valdi.</p>
+        <p>Ég er Full-Stack forritari.</p>
       </div>
       <div class="vbox">
         <p>
-          Check out my <a href="#projects">Projects</a>
+          Skoðaðu <a href="#projects">Verkefnin mín</a>
         </p>
-        <p>or</p>
+        <p>eða</p>
         <p>
-          Read more <a href="#about">About me</a>
+          Lestu <a href="#about">um mig</a>
         </p>
       </div>
     </div>
@@ -58,7 +58,7 @@
     <img href="#projects" src="./img/upload.png" class="down-arrow" style="width:50px; aspect-ratio: 2;">
   </a>
   <section id="projects">
-    <h1>Projects</h1>
+    <h1>Verkefni</h1>
     <div class="grid">
       <div class="project">
         <img class="project-image" src="./img/valdidotdev.png" alt="">
@@ -67,7 +67,7 @@
           <div class="label js">Javascript</div>
           <div class="label css">CSS</div>
         </div>
-        <p> My personal website</p>
+        <p> Persónulega vefsíðan mín</p>
         <a class="github-button" href="https://github.com/valdi7913/valdidotdev.git"> 
         <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
           Github 
@@ -82,8 +82,8 @@
           <div class="label firebase">Firebase</div>
           <div class="label css">Typescript</div>
         </div>
-        <p> A game about finding car licence plates </p>
-        <button> Visit </button>
+        <p> Leikur sem snýst um að finna númeraplötur bíla </p>
+        <button> Skoða </button>
       </div>
       <div class="project">
         <img class="project-image" src="./img/FlappyFuglur.png" alt="">
@@ -96,7 +96,8 @@
           <div class="label psql">PSQL</div>
         </div>
         <p>A simple flappy bird clone with a global leaderboard</p>
-        <button> Visit </button>
+        <p>Einfaldur flappy bird klóni með stigatöflu</p>
+        <button> Skoða </button>
       </div>
       <div class="project">
         <img class="project-image" src="https://source.unsplash.com/black-and-orange-computer-keyboard-KYw1eUx1J7Y"
@@ -109,8 +110,8 @@
           <div class="label express">Express</div>
           <div class="label psql">PSQL</div>
         </div>
-        <p> A typing game that aims to teach good finger placements </p>
-        <button> Visit </button>
+        <p> Ritvinnsluleikur sem miðar að því að kenna fingrafimi </p>
+        <button> Skoða </button>
       </div>
       <div class="project">
         <img class="project-image"
@@ -122,8 +123,7 @@
           <div class="label node">Node</div>
           <div class="label firebase">Firebase</div>
         </div>
-        <p> A website where you can play against simple AI opponents</p>
-        <!-- <button> Visit </button> -->
+        <p> Spilaðu sígilda leiki á móti gervigreind</p>
         <a class="github-button" href="https://github.com/valdi7913/AIGame">
         <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
           Github
@@ -132,28 +132,28 @@
     </div>
   </section>
   <section id="about">
-    <h1>About me</h1>
+    <h1>Um mig</h1>
     <p>
-      I am a 23 year old software engineer from Iceland.
+      Ég er 23 ára gamall hugbúnaðarverkfræðingur
     </p>
     <p>
-      I love simple and minimal solutions to complex problems.
+      Ég elska einfaldar og minimalískar lausnir að flóknum vandamálum.
     </p>
     <p>
-      I have been programming for over 4 years and have a Bachelors Degree in Software engineering from UI
+      Ég hef forritað í yfir 4 ár og er með hugbúnaðarverkfræðigráðu frá Háskóla Íslands
     </p>
     <p>
-      Check out my CV
+      Skoðaðu ferilskránna mína
     </p>
     <form>
-      <button class="download" onclick="window.open('./img/CV_Valdimars_Arnar_English.pdf')" type="submit">Download</button>
+      <button class="download" onclick="window.open('./img/CV_Valdimars_Arnar.pdf')" type="submit">Skoða ferilskrá</button>
     </form>
   </section>
   <section id="skills">
-    <h1>Skills</h1>
+    <h1>Hæfni</h1>
     <div class="grid">
       <div class="vbox item">
-        <h2>Languages</h2>
+        <h2>Forritunarmál</h2>
         <div class="hbox">
           <img class="icon"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
@@ -179,7 +179,7 @@
         </div>
       </div>
       <div class="vbox item">
-        <h2>Tech</h2>
+        <h2>Hugbúnaður</h2>
         <div class="hbox">
           <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vim/vim-original.svg" />
           <p> Vim</p>
@@ -215,7 +215,7 @@
 
       </div>
       <div class="vbox item">
-        <h2>Interested in</h2>
+        <h2>Áhugamál</h2>
         <div class="hbox">
           <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/rust/rust-original.svg" />
           <p> Rust </p>
@@ -234,7 +234,7 @@
     </div>
   </section>
   <footer id="contact" class="vbox">
-    <h2> Get in touch: </h2>
+    <h2> Hafðu samband: </h2>
     <div class="hbox start">
       <img class="icon" src="./img/gmail.png" alt="Email">
       <a href="mailto:valdi7913@gmail.com">valdi7913@gmail.com</a>
