--- a/index-is.html
+++ b/index-is.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -95,7 +96,6 @@
           <div class="label express">Express</div>
           <div class="label psql">PSQL</div>
         </div>
-        <p>A simple flappy bird clone with a global leaderboard</p>
         <p>Einfaldur flappy bird klóni með stigatöflu</p>
         <button> Skoða </button>
       </div>
@@ -134,13 +134,13 @@
   <section id="about">
     <h1>Um mig</h1>
     <p>
-      Ég er 23 ára gamall hugbúnaðarverkfræðingur
+      Ég er 23 ára gamall full stack forritari
     </p>
     <p>
-      Ég elska einfaldar og minimalískar lausnir að flóknum vandamálum.
+      Ég elska einfaldar og minimalískar lausnir á flóknum vandamálum.
     </p>
     <p>
-      Ég hef forritað í yfir 4 ár og er með hugbúnaðarverkfræðigráðu frá Háskóla Íslands
+      Ég hef forritað í yfir 4 ár og er með BSc í hugbúnaðarverkfræði frá Háskóla Íslands
     </p>
     <p>
       Skoðaðu ferilskránna mína
@@ -177,6 +177,10 @@
           <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/latex/latex-original.svg" />
           <p> LaTex </p>
         </div>
+        <div class="hbox">
+          <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg" />
+          <p> C# </p>
+        </div>
       </div>
       <div class="vbox item">
         <h2>Hugbúnaður</h2>
@@ -211,8 +215,6 @@
             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" />
           <p> Node </p>
         </div>
-
-
       </div>
       <div class="vbox item">
         <h2>Áhugamál</h2>
@@ -248,8 +250,6 @@
           src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg" />
       <a href="https://www.linkedin.com/in/valdimar-%C3%B6rn-sverrisson-42000828a/">Valdimar Örn Sverrisson</a>
     </div>
-
   </footer>
 </body>
-
 </html>
