--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -38,7 +39,7 @@
       <div class="vbox">
         <h1>Hey!</h1>
         <p>I'm Valdi.</p>
-        <p>A Full-Stack Engineer.</p>
+        <p>A full-stack developer.</p>
       </div>
       <div class="vbox">
         <p>
@@ -134,19 +135,19 @@
   <section id="about">
     <h1>About me</h1>
     <p>
-      I am a 23 year old software engineer from Iceland.
+      I am a 23 year old full stack developer from Iceland.
     </p>
     <p>
       I love simple and minimal solutions to complex problems.
     </p>
     <p>
-      I have been programming for over 4 years and have a Bachelors Degree in Software engineering from UI
+      I have been programming for over 4 years and have a BSc in Software engineering from UI
     </p>
     <p>
       Check out my CV
     </p>
     <form>
-      <button class="download" onclick="window.open('./img/CV_Valdimars_Arnar_English.pdf')" type="submit">Download</button>
+      <button class="download" onclick="window.open('./img/CV_Valdimars_Arnar_English.pdf')" type="submit">View CV</button>
     </form>
   </section>
   <section id="skills">
@@ -175,7 +176,11 @@
         </div>
         <div class="hbox">
           <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/latex/latex-original.svg" />
-          <p> LaTex </p>
+        <p> LaTeX </p>
+        </div>
+        <div class="hbox">
+          <img  class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg" />
+          <p> C# </p>
         </div>
       </div>
       <div class="vbox item">
