change: updated projects

--- a/index-is.html
+++ b/index-is.html
@@ -74,62 +74,19 @@
           Github 
         </a>
       </div>
+
       <div class="project">
-        <img class="project-image" src="./img/00Game.png" alt="">
-        <h2>00Game</h2>
-        <div class="labels">
-          <div class="label react">React js</div>
-          <div class="label css">CSS</div>
-          <div class="label firebase">Firebase</div>
-          <div class="label css">Typescript</div>
-        </div>
-        <p> Leikur sem snýst um að finna númeraplötur bíla </p>
-        <button> Skoða </button>
-      </div>
-      <div class="project">
-        <img class="project-image" src="./img/FlappyFuglur.png" alt="">
-        <h2>Flappyfuglur</h2>
+        <img class="project-image" src="./img/traffic.png" alt="">
+        <h2>erumferd.is</h2>
         <div class="labels">
           <div class="label js">Javascript</div>
           <div class="label css">CSS</div>
-          <div class="label node">Node</div>
-          <div class="label express">Express</div>
-          <div class="label psql">PSQL</div>
         </div>
-        <p>Einfaldur flappy bird klóni með stigatöflu</p>
-        <button> Skoða </button>
-      </div>
-      <div class="project">
-        <img class="project-image" src="https://source.unsplash.com/black-and-orange-computer-keyboard-KYw1eUx1J7Y"
-          alt="">
-        <h2>Ritill</h2>
-        <div class="labels">
-          <div class="label react">React js</div>
-          <div class="label css">CSS</div>
-          <div class="label node">Node</div>
-          <div class="label express">Express</div>
-          <div class="label psql">PSQL</div>
-        </div>
-        <p> Ritvinnsluleikur sem miðar að því að kenna fingrafimi </p>
-        <button> Skoða </button>
-      </div>
-      <div class="project">
-        <img class="project-image"
-          src="https://source.unsplash.com/brown-chess-pieces-on-brown-wooden-chess-board-7VGzV09YnvA" alt="">
-        <h2>AIGame</h2>
-        <div class="labels">
-          <div class="label js">Javascript</div>
-          <div class="label css">CSS</div>
-          <div class="label node">Node</div>
-          <div class="label firebase">Firebase</div>
-        </div>
-        <p> Spilaðu sígilda leiki á móti gervigreind</p>
-        <a class="github-button" href="https://github.com/valdi7913/AIGame">
-        <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
-          Github
+        <p> Vefsíða með upplýsingar um umferð á höfuðborgarsvæðinu </p>
+        <a class="github-button" href="https://erumferd.is"> Heimsækja </a> 
         </a>
       </div>
-    </div>
+     </div>
   </section>
   <section id="about">
     <h1>Um mig</h1>
@@ -140,7 +97,7 @@
       Ég elska einfaldar og minimalískar lausnir á flóknum vandamálum.
     </p>
     <p>
-      Ég hef forritað í yfir 4 ár og er með BSc í hugbúnaðarverkfræði frá Háskóla Íslands
+      Ég er með yfir 5 ára reynslu við forritun og er með BSc í hugbúnaðarverkfræði frá Háskóla Íslands
     </p>
     <p>
       Skoðaðu ferilskránna mína
