--- a/index.html
+++ b/index.html
@@ -74,62 +74,19 @@
           Github 
         </a>
       </div>
+
       <div class="project">
-        <img class="project-image" src="./img/00Game.png" alt="">
-        <h2>00Game</h2>
-        <div class="labels">
-          <div class="label react">React js</div>
-          <div class="label css">CSS</div>
-          <div class="label firebase">Firebase</div>
-          <div class="label css">Typescript</div>
-        </div>
-        <p> A game about finding car licence plates </p>
-        <button> Visit </button>
-      </div>
-      <div class="project">
-        <img class="project-image" src="./img/FlappyFuglur.png" alt="">
-        <h2>Flappyfuglur</h2>
+        <img class="project-image" src="./img/traffic.png" alt="">
+        <h2>erumferd.is</h2>
         <div class="labels">
           <div class="label js">Javascript</div>
           <div class="label css">CSS</div>
-          <div class="label node">Node</div>
-          <div class="label express">Express</div>
-          <div class="label psql">PSQL</div>
         </div>
-        <p>A simple flappy bird clone with a global leaderboard</p>
-        <button> Visit </button>
-      </div>
-      <div class="project">
-        <img class="project-image" src="https://source.unsplash.com/black-and-orange-computer-keyboard-KYw1eUx1J7Y"
-          alt="">
-        <h2>Ritill</h2>
-        <div class="labels">
-          <div class="label react">React js</div>
-          <div class="label css">CSS</div>
-          <div class="label node">Node</div>
-          <div class="label express">Express</div>
-          <div class="label psql">PSQL</div>
-        </div>
-        <p> A typing game that aims to teach good finger placements </p>
-        <button> Visit </button>
-      </div>
-      <div class="project">
-        <img class="project-image"
-          src="https://source.unsplash.com/brown-chess-pieces-on-brown-wooden-chess-board-7VGzV09YnvA" alt="">
-        <h2>AIGame</h2>
-        <div class="labels">
-          <div class="label js">Javascript</div>
-          <div class="label css">CSS</div>
-          <div class="label node">Node</div>
-          <div class="label firebase">Firebase</div>
-        </div>
-        <p> A website where you can play against simple AI opponents</p>
-        <!-- <button> Visit </button> -->
-        <a class="github-button" href="https://github.com/valdi7913/AIGame">
-        <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
-          Github
+        <p> My personal website</p>
+        <a class="github-button" href="https://erumferd.is"> Visit </a> 
         </a>
       </div>
+   
     </div>
   </section>
   <section id="about">
@@ -141,7 +98,7 @@
       I love simple and minimal solutions to complex problems.
     </p>
     <p>
-      I have been programming for over 4 years and have a BSc in Software engineering from UI
+      I have over 5 years of experience in programming and have a BSc in Software engineering from the Univercity of Iceland
     </p>
     <p>
       Check out my CV
