fix: remove slow animation and minor text changes

--- a/index-is.html
+++ b/index-is.html
@@ -81,6 +81,8 @@
         <div class="labels">
           <div class="label js">Javascript</div>
           <div class="label css">CSS</div>
+          <div class="label express">Express</div>
+          <div class="label psql">Postgres</div>
         </div>
         <p> Vefsíða með upplýsingar um umferð á höfuðborgarsvæðinu </p>
         <a class="github-button" href="https://erumferd.is"> Heimsækja </a> 
