--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="label js">Javascript</div>
           <div class="label css">CSS</div>
         </div>
-        <p> My personal website</p>
+        <p> A website that calculates a live index for traffic in Reykjavík </p>
         <a class="github-button" href="https://erumferd.is"> Visit </a> 
         </a>
       </div>
