--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
+  <script src="https://cdn.jsdelivr.net/gh/VestraAI/script-tag@refs/heads/main/vestra.min.js"></script>
+  <script>
+  const search = new Vestra.search({
+    uuid: '72b62004-cf8d-4978-8f9f-6c982b81e8a8',
+    apiKey: 'beae9df8240d7b275c1f6aefd3ff71e7'
+  });
+  </script>
   <script defer src="index.js"></script>
   <link id="light" rel="stylesheet" type="text/css" href="light.css" />
   <link rel="stylesheet" type="text/css" href="root.css" />
@@ -81,6 +88,8 @@
         <div class="labels">
           <div class="label js">Javascript</div>
           <div class="label css">CSS</div>
+          <div class="label express">Express</div>
+          <div class="label psql">Postgres</div>
         </div>
         <p> A website that calculates a live index for traffic in Reykjavík </p>
         <a class="github-button" href="https://erumferd.is"> Visit </a> 
@@ -92,7 +101,7 @@
   <section id="about">
     <h1>About me</h1>
     <p>
-      I am a 23 year old full stack developer from Iceland.
+      I am a 24 year old full stack developer from Iceland.
     </p>
     <p>
       I love simple and minimal solutions to complex problems.
